perl (5.12.0~rc1-1) UNRELEASED; urgency=low

  * New upstream release candidate.
  * Update conflicts/replaces/provides entries for the
    numerous separately packaged modules.
  * Unversion the libterm-readline-gnu-perl build conflict again due to a
    new failure mode in lib/perl5db.t.

 -- Niko Tyni <ntyni@debian.org>  Wed, 24 Mar 2010 14:36:39 +0200

perl (5.10.1-12) UNRELEASED; urgency=low

  * Fix the location of an Archive::Tar test file.
  * Update conflict versions on libscalar-list-utils-perl, libxsloader-perl,
    and libnet-perl.
  * Properly include the 5.10.0 site directories on @INC as per Perl policy.
    (Closes: #575030)
  * Fix an errno stringification bug in taint mode. (Closes: #574129) 
  * Move Config_heavy.pl into perl-base and unapply the DynaLoader
    changes introduced in 5.10.1-5. (Closes: #575308)

 -- Niko Tyni <ntyni@debian.org>  Tue, 16 Mar 2010 00:57:27 +0200

perl (5.10.1-11) unstable; urgency=low

  * Unapply obsolete Debian patches:
    - Object::Accessor POD patch (fixed in 5.10.1)
    - "missing /etc/hosts"       (fixed in 5.10.1)
    - "arm fp non-IEEE rounding" (fixed in armel)
    - "ppc/ia64 optimization upgrade" (no-op since 5.10.0-5)
    - "arm optimization downgrade" (fixed sometime after gcc 4.0)
  * Make perl-base conflict with older versions of safe-rm to unbreak
    maintainer scripts on partial upgrades. (Closes: #566080)
  * Update debian/README.source to recommend using quilt in NMUs.
  * Include upstream commit information in patchlevel.h.
  * Upload to unstable.

 -- Niko Tyni <ntyni@debian.org>  Wed, 03 Feb 2010 22:38:26 +0200

perl (5.10.1-10) experimental; urgency=low

  * Add conflicts/replaces/provides for libtime-local-perl. (Closes: #567188)
  * Really add the new perl-modules README.Debian. (Closes: #565721)
  * Make libcgi-fast-perl depend on perl (<< 5.10.2~) because
    it's now in the core directory. (Closes: #567092)
  * Switch to dpkg v3 source format.