@@ -5,8 +5,9 @@ perl (5.12.0~rc1-1) UNRELEASED; urgency=low
     numerous separately packaged modules.
   * Unversion the libterm-readline-gnu-perl build conflict again due to a
     new failure mode in lib/perl5db.t.
+  * Verify at build time that perl-base stays self contained.
 
- -- Niko Tyni <ntyni@debian.org>  Wed, 24 Mar 2010 14:36:39 +0200
+ -- Niko Tyni <ntyni@debian.org>  Tue, 30 Mar 2010 23:15:58 +0300
 
 perl (5.10.1-12) UNRELEASED; urgency=low
 
